# CL-agent-evaluation

./: .gitignore  README.md  pyproject.toml
data/: test_cases.json
ontogpt/input/: astrocyte_input.txt  omar_go_links.txt
ontogpt/output/: go-relational-gpt4o-latest-omar-project.yaml  go-relational-omar-project.yaml  go-terms-gpt4olatest-omar-project.yaml  go-terms-omar-project.yaml  gocam-omar-project-full-text.yaml  gocam-omar-project-incomplete-text.yaml  omar-project-extra-text-gocam.yaml  omar-project-test.yaml  omar-project-test2.yaml
ontogpt/templates/: cell_process.py  cell_process.yaml  core.py  core.yaml  go_terms.py  go_terms.yaml  go_terms_relational.py  go_terms_relational.yaml  gocam.py  gocam.yaml
output/chatgpt_and_citeseek_output/: astrocyte_citeseek_results.txt  astrocyte_description.txt  astrocyte_statements.yaml  intestinal_subserosal_fibroblast_citeseek_results.txt  intestinal_subserosal_fibroblast_description.txt  intestinal_subserosal_fibroblast_statements.yaml  tendon_cell_citeseek_results.txt  tendon_cell_description.txt  tendon_cell_statements.yaml  thymic_tuft_cell_citeseek_results.txt  thymic_tuft_cell_description.txt  thymic_tuft_cell_statements.yaml
output/perplexity_output/: DEEPSEARCH-monocyte-derived_Kupffer_cell_perplexity_def.json  astrocyte_perplexity_def.json  paneth_cell_perplexity_def.json  tendon_cell_perplexity_def.json
src/: generate_citeseek_references.py  generate_defs_no_refs.py  generate_perplexity_defs_refs.py  generate_pplx_defs_restricted.py  generate_pplx_defs_unrestricted.py
(+10 files in other folders)
